--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx parcel .\\products.html"
+    "build": "parcel build ./src/index.html"
   },
   "author": "",
   "license": "ISC",
