--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bsr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "default": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build ./index.html"
   },
   "author": "",
   "license": "ISC",
